--- a/templates/security/grupos_modulos_permisos/list.html
+++ b/templates/security/grupos_modulos_permisos/list.html
@@ -112,14 +112,18 @@
                 </div>
 
                 <!-- Enlaces adicionales -->
-                <div class="flex flex-col md:flex-row justify-center form-group text-center p-4">
+                <div class="flex flex-col md:flex-row justify-center form-group text-center p-4 gap-4 md:gap-10">
                     {% if permissions.add_groupmodulepermission %}
-                    <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 md:mr-2 mb-2 md:mb-0 flex items-center justify-center transition-colors duration-300"
+                    <a class="bg-gradient-to-r from-cyan-700 via-fuchsia-700 to-blue-700 hover:from-cyan-400 hover:to-fuchsia-500 text-white py-3 px-6 rounded-2xl flex items-center justify-center transition-all duration-300 gap-3 shadow-xl border-2 border-cyan-400/60 hover:border-fuchsia-400 text-lg font-[Orbitron]"
                         href="{% url 'security:group_module_permission_create' %}">
-                        <i class="fa-solid fa-plus mr-2"></i> Nuevo Grupo-Módulo-Permiso
+                        <i class="fa-solid fa-plus"></i> Nuevo Grupo-Módulo-Permiso
+                    </a>
+                    <a class="bg-gradient-to-r from-cyan-700 via-fuchsia-700 to-blue-700 hover:from-cyan-400 hover:to-fuchsia-500 text-white py-3 px-6 rounded-2xl flex items-center justify-center transition-all duration-300 gap-3 shadow-xl border-2 border-cyan-400/60 hover:border-fuchsia-400 text-lg font-[Orbitron]"
+                        href="{% url 'security:group_module_permission_create_interactive' %}">
+                        <i class="fa-solid fa-plus"></i> Nuevo Grupo-Módulo-Permiso-Interactivo
                     </a>
                     {% endif %}
-                    <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center transition-colors duration-300"
+                    <a class="bg-gradient-to-r from-cyan-700 via-fuchsia-700 to-blue-700 hover:from-cyan-400 hover:to-fuchsia-500 text-white py-3 px-6 rounded-2xl flex items-center justify-center transition-all duration-300 gap-3 shadow-xl border-2 border-cyan-400/60 hover:border-fuchsia-400 text-lg font-[Orbitron]"
                         href="{% url 'home' %}">
                         <i class="fa-solid fa-house"></i>
                     </a>
