--- a/templates/doctor/diagnosticos/list.html
+++ b/templates/doctor/diagnosticos/list.html
@@ -1,8 +1,7 @@
-{% extends 'home.html' %} 
+{% extends 'base.html' %} 
 <title>{% block title %}{{title}}{% endblock %}</title>
 {% block content %}
     {% load static %}
-    {% include 'fragments/messages.html' %}
     <section class="dark:bg-principal mt-2">
         <div class="text-center" data-aos="fade-up" data-aos-delay="200">
             <div class="sm:pt-8 lg:pt-4">
