--- a/templates/doctor/pacientes/form.html
+++ b/templates/doctor/pacientes/form.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 <title>{% block title %}{{ title1|default:"Paciente" }}{% endblock %}</title>
 {% load static %}
 {% block content %}
