--- a/templates/security/grupos/list.html
+++ b/templates/security/grupos/list.html
@@ -1,4 +1,8 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
+<title>{% block title %}{{title}}{% endblock %}</title>
+{% block content %}
+    {% load static %}
+    <section class="dark:bg-principal mt-2">ends 'base.html' %}
 <title>{% block title %}{{ title }}{% endblock %}</title>
 {% block content %}
     {% load static %}
