--- a/templates/security/modules/form.html
+++ b/templates/security/modules/form.html
@@ -1,6 +1,6 @@
 <!-- Formulario para crear o editar un módulo, usando CSS y JS centralizados para errores y vista previa de íconos -->
 
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 <title>{% block title %}{{ title1|default:"Módulo" }}{% endblock %}</title>
 {% load static %}
 {% block content %}
