--- a/templates/security/usuarios/form.html
+++ b/templates/security/usuarios/form.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 <title>{% block title %}{{ title|default:"Usuarios" }}{% endblock %}</title>
 {% load static %}
 {% block content %}
