--- a/templates/doctor/diagnosticos/form.html
+++ b/templates/doctor/diagnosticos/form.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %}
+{% extends 'base.html' %}
 <title>{% block title %}{{title}}{% endblock %}</title>
 {% load static %}
 {% block content %}
