--- a/templates/security/grupos/form.html
+++ b/templates/security/grupos/form.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %} 
+{% extends 'base.html' %} 
 <title>{% block title %}{{title|default:"Grupos"}}{% endblock %}</title>
 {% load static %}
 {% block content %}
