--- a/templates/security/menus/form.html
+++ b/templates/security/menus/form.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %} 
+{% extends 'base.html' %} 
 <title>{% block title %}{{title|default:"Menús"}}{% endblock %}</title>
 {% load static %}
 {% block content %}
